syntax = "proto3";
option go_package = "./internal/services/rate/proto";

package rate;

service Rate {
  // GetRates returns rate codes for hotels for a given date range
  rpc GetRates(Request) returns (Result);
}

message Request {
  repeated string hotelIds = 1;
  string inDate = 2;
  string outDate = 3;
}

message Result {
  repeated RatePlan ratePlans = 1;
}

message RatePlan {
  string hotelId = 1;
  string code = 2;
  string inDate = 3;
  string outDate = 4;
  RoomType roomType = 5;
}

message RoomType {
  double bookableRate = 1;
  double totalRate = 2;
  double totalRateInclusive = 3;
  string code = 4;
  string currency = 5;
  string roomDescription = 6;
}
